Хедер,меню,сервис,портфолио- все ок

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
        </ul>
        </div>
      </div>
+
+     
+<div id="home">
+  <div class="container">
+    <h3>Welcome To Our Studio</h3>
+    <h1>It's nice to meet you</h1>
+    <button class="btn">Tell me more</button>
+  </div>
+</div>
+
    <div id="services" class="box">
      <div class="container">
        <h2 class="title">Services</h2>
@@ -59,47 +69,47 @@
               <span>Brending</span>
                </div>
              </div>
-             <div class="portfolio-item">
+        <div class="portfolio-item">
                <a href=""><img src="img/p-item2.jpg" height="300px" width="291" alt=""/></a>
                  <div class="p-item-footer">
                    <h5 class="title"> Ebony ivory</h5>
                    <span>Brending</span>
                     </div>
                   </div>
-                  <div class="portfolio-item">
+        <div class="portfolio-item">
                     <a href=""><img src="img/p-item3.jpg" height="300px" width="291" alt=""/></a>
                       <div class="p-item-footer">
                         <h5 class="title"> Ebony ivory</h5>
                         <span>Brending</span>
                          </div>
                        </div>
-                       <div class="portfolio-item">
+          <div class="portfolio-item">
                          <a href=""><img src="img/p-item4.jpg" height="300px" width="291" alt=""/></a>
                            <div class="p-item-footer">
                              <h5 class="title"> Ebony ivory</h5>
                              <span>Brending</span>
                               </div>
                             </div>
-                            <div class="portfolio-item">
+          <div class="portfolio-item">
                               <a href=""><img src="img/p-item5.jpg" height="300px" width="291" alt=""/></a>
                                 <div class="p-item-footer">
                                   <h5 class="title"> Ebony ivory</h5>
                                   <span>Brending</span>
                                    </div>
                                  </div>
-                                 <div class="portfolio-item">
+          <div class="portfolio-item">
                                    <a href=""><img src="img/p-item6.jpg" height="300px" width="291" alt=""/></a>
                                      <div class="p-item-footer">
                                        <h5 class="title"> Ebony ivory</h5>
                                        <span>Brending</span>
                                         </div>
                                       </div>
-           </div>
-         </div>
+                               </div>
+                        </div>
 
 
 
-
+</div>
     </div>
 
 
