Впилены картинки, о нас.Осталась последняя часть

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div id="header">
      <div class="container clearfix">
        <div class="logo">
-         <a href="#"><img src="img/logo.png" height="28" width="79" alt=""></a>
+         <a href="#"><img src="css/img/logo.png" height="28" width="79" alt=""></a>
        </div>
        <ul class="nav">
          <li><a href="#home">Home</a></li>
@@ -23,7 +23,7 @@
        </div>
      </div>
 
-     
+
 <div id="home">
   <div class="container">
     <h3>Welcome To Our Studio</h3>
@@ -39,18 +39,15 @@
        <div class="services-wrap clearfix">
          <div class="services-item commerce">
            <h5 class="title">E-Commerce</h5>
-           <p>FFfffffffffffffffffffffffffffff
-           ffffffffffffffffffffffffffffffffff</p>
+           <p>Proin purus consequat sem cure digni. Donec portitota entum suspicit.</p>
          </div>
          <div class="services-item responsive">
            <h5 class="title">E-Commerce</h5>
-           <p>FFfffffffffffffffffffffffffffff
-           ffffffffffffffffffffffffffffffffff</p>
+           <p>Proin purus consequat sem cure digni. Donec portitota entum suspicit.</p>
          </div>
          <div class="services-item security">
            <h5 class="title">E-Commerce</h5>
-           <p>FFfffffffffffffffffffffffffffff
-           ffffffffffffffffffffffffffffffffff</p>
+           <p>Proin purus consequat sem cure digni. Donec portitota entum suspicit.</p>
          </div>
         </div>
        </div>
@@ -63,66 +60,115 @@
           <div class="portfolio-wrap clearfix">
 
         <div class="portfolio-item">
-          <a href=""><img src="img/p-item1.jpg" height="300px" width="291" alt=""/></a>
+          <a href=""><img src="css/img/p-item1.jpg" height="300px" width="291" alt=""/></a>
             <div class="p-item-footer">
               <h5 class="title"> Ebony ivory</h5>
               <span>Brending</span>
                </div>
              </div>
         <div class="portfolio-item">
-               <a href=""><img src="img/p-item2.jpg" height="300px" width="291" alt=""/></a>
+               <a href=""><img src="css/img/p-item2.jpg" height="300px" width="291" alt=""/></a>
                  <div class="p-item-footer">
                    <h5 class="title"> Ebony ivory</h5>
                    <span>Brending</span>
                     </div>
                   </div>
         <div class="portfolio-item">
-                    <a href=""><img src="img/p-item3.jpg" height="300px" width="291" alt=""/></a>
+                    <a href=""><img src="css/img/p-item3.jpg" height="300px" width="291" alt=""/></a>
                       <div class="p-item-footer">
                         <h5 class="title"> Ebony ivory</h5>
                         <span>Brending</span>
                          </div>
                        </div>
-          <div class="portfolio-item">
-                         <a href=""><img src="img/p-item4.jpg" height="300px" width="291" alt=""/></a>
+        <div class="portfolio-item">
+                         <a href=""><img src="css/img/p-item4.jpg" height="300px" width="291" alt=""/></a>
                            <div class="p-item-footer">
                              <h5 class="title"> Ebony ivory</h5>
                              <span>Brending</span>
                               </div>
                             </div>
-          <div class="portfolio-item">
-                              <a href=""><img src="img/p-item5.jpg" height="300px" width="291" alt=""/></a>
+        <div class="portfolio-item">
+                              <a href=""><img src="css/img/p-item5.jpg" height="300px" width="291" alt=""/></a>
                                 <div class="p-item-footer">
                                   <h5 class="title"> Ebony ivory</h5>
                                   <span>Brending</span>
                                    </div>
                                  </div>
-          <div class="portfolio-item">
-                                   <a href=""><img src="img/p-item6.jpg" height="300px" width="291" alt=""/></a>
+        <div class="portfolio-item">
+                                   <a href=""><img src="css/img/p-item6.jpg" height="300px" width="291" alt=""/></a>
                                      <div class="p-item-footer">
                                        <h5 class="title"> Ebony ivory</h5>
                                        <span>Brending</span>
                                         </div>
                                       </div>
+                                    </div>
+                                 </div>
                                </div>
-                        </div>
+<div id="about" name="about" class="box">
+  <div class="container">
+    <h2 class="title">About US<h2>
+      <p class="descr">Proin iaclus purus consecuat sem cure.</p>
+      <div class="about-wrap">
+       <div class="about-item clearfix">
+         <div class="about-text left text-right">
+             <h5 class="title"><span>July 2010</span></br>Our Humble Beginnings</h5>
+             <p>Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+             Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+           Proin purus consequat sem cure digni. Donec portitota entum suspicit.</p>
+         </div>
+         <div class="about-img left">
+           <img src="css/img/a1.jpg" alt=""/>
+
+
+                </div>
+             </div>
+             <div class="about-item clearfix">
+               <div class="about-text right text-left">
+                   <h5 class="title"><span>January 2011</span></br>Facing Startup Battles</h5>
+                   <p>Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+                   Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+                 Proin purus consequat sem cure digni. Donec portitota entum suspicit.</p>
+               </div>
+               <div class="about-img right">
+                 <img src="css/img/a2.jpg" alt=""/>
+
+
+                 </div>
+                </div>
+                <div class="about-item clearfix">
+                  <div class="about-text left text-right">
+                      <h5 class="title"><span>December 2012</span></br>Enter The Dark Days</h5>
+                      <p>Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+                      Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+                    Proin purus consequat sem cure digni. Donec portitota entum suspicit.</p>
+                  </div>
+                  <div class="about-img left">
+                    <img src="css/img/a3.jpg" alt=""/>
+                    </div>
+                   </div>
+
+                 </div>
+              </div>
+              <div class="about-item clearfix">
+                <div class="about-text right text-left">
+                    <h5 class="title"><span>February 2014</span></br>Our Triumph</h5>
+                    <p>Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+                    Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+                  Proin purus consequat sem cure digni. Donec portitota entum suspicit.</p>
+                </div>
+                <div class="about-img right">
+                  <img src="css/img/a4.jpg" alt=""/>
+         </div>
+        </div>
+        <a href="#" class="about-link">Our </br>Story </br> Continues </br> ...</a>
 
 
 
-</div>
-    </div>
 
 
 
 
-
-
-
-
-
-
-
-
-
+       </div>
+      </div>
 
 </body>
