--- a/index.html
+++ b/index.html
@@ -160,15 +160,63 @@
                   <img src="css/img/a4.jpg" alt=""/>
          </div>
         </div>
-        <a href="#" class="about-link">Our </br>Story </br> Continues </br> ...</a>
-
-
-
-
-
-
-
+        <a href="#" class="about-link">Our </br>Story </br> Continues </br>
+          ...</a>
        </div>
+          <div id="item" class="box">
+      <div class="container">
+        <h2 class="title">our amazing team</h2>
+        <p class="descr">Proin iacuos consuquent srm cure.</p>
+        <div class="team-wrap clearfix">
+          <div class="team-item">
+          <img src="img/team-img.png" height="220" width="220" alt=""/>
+            <h5 class="title">Kinberly Thompson</h5>
+            <p class="cat">Marketer</p>
+            <div class="social">
+              <a href="#" class="ic-tw">&nbsp</a>
+              <a href="#" class="ic-fb">&nbsp</a>
+              <a href="#" class="ic-pn">&nbsp</a>
+            </div>
+          </div>
+          <div class="team-item">
+          <img src="img/team-img.png" height="220" width="220" alt=""/>
+            <h5 class="title">Kinberly Thompson</h5>
+            <p class="cat">Marketer</p>
+            <div class="social">
+              <a href="#" class="ic-tw">&nbsp</a>
+              <a href="#" class="ic-fb">&nbsp</a>
+              <a href="#" class="ic-gl">&nbsp</a>
+            </div>
+          </div>
+          <div class="team-item">
+          <img src="img/team-img.png" height="220" width="220" alt=""/>
+            <h5 class="title">Kinberly Thompson</h5>
+            <p class="cat">Marketer</p>
+            <div class="social">
+                    <a href="#" class="ic-fb">&nbsp</a>
+              <a href="#" class="ic-pn">&nbsp</a>
+            </div>
+          </div>
+        </div>
+        <p class="descr team-info">Proin purus consequat sem cure digni. Donec portitota entum suspicit.
+        Proin purus consequat Proin purus consequat sem cure digni. </br>Donec portitota entum suspicit.
+        Proin purus consequat.</p>
       </div>
+    </div>
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
