Код готов, осталось дорезать иконки, черные круги, и поправить формы

--- a/index.html
+++ b/index.html
@@ -203,7 +203,45 @@
         Proin purus consequat.</p>
       </div>
     </div>
+    <div class="brand">
+      <div class="container">
+        <a href="#"><img src="img/envato.jpg" height="30px" width="161"/></a>
+        <a href="#"><img src="img/wordpress.jpg" height="42" width="186"/></a>
+        <a href="#"><img src="img/tuts.jpg" height="41" width="131"/></a>
+        <a href="#"><img src="img/micro.jpg" height="42" width="162"/></a>
+      </div>
+    </div>
 
+    <div id="contact" name="contact" class="box">
+<div class="container">
+  <h2 class="title">Contact US</h2>
+  <p class="descr">Proin iacuos consuquent srm cure.</p>
+  <form action="#" id="message">
+    <div class="clearfix">
+      <div class="left">
+        <input type="text" placeholder="your Name" />
+        <input type="text" placeholder="your E-mail"/>
+        <input type="text" placeholder="your SUBJECT"/>
+      </div>
+        <div class="right">
+          <textarea cols="30" rows="0" placeholder="Your message"></textarea>
+        </div>
+    </div>
+    <input type="submit" value="SEND MESSAGE"class=btn />
+  </form>
+  </div>
+    </div>
+<div id="copyright"/>
+<div class="container"/>
+<p class="left">&copy Copyright 2014 FreebiesXpress.com</p>
+<div class="social">
+  <a href="#" class="ic-tw black">&nbsp</a>
+  <a href="#" class="ic-fb black">&nbsp</a>
+  <a href="#" class="ic-pn black">&nbsp</a>
+  <a href="#" class="ic-gl black">&nbsp</a>
+</div>
+</div>
+</div>
   </div>
 
 
