--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <p class="descr">Proin iacuos consuquent srm cure.</p>
         <div class="team-wrap clearfix">
           <div class="team-item">
-          <img src="img/team-img.png" height="220" width="220" alt=""/>
+          <img src="css/img/team-img.png" height="220" width="220" alt=""/>
             <h5 class="title">Kinberly Thompson</h5>
             <p class="cat">Marketer</p>
             <div class="social">
@@ -179,7 +179,7 @@
             </div>
           </div>
           <div class="team-item">
-          <img src="img/team-img.png" height="220" width="220" alt=""/>
+          <img src="css/img/team-img.png" height="220" width="220" alt=""/>
             <h5 class="title">Kinberly Thompson</h5>
             <p class="cat">Marketer</p>
             <div class="social">
@@ -189,7 +189,7 @@
             </div>
           </div>
           <div class="team-item">
-          <img src="img/team-img.png" height="220" width="220" alt=""/>
+          <img src="css/img/team-img.png" height="220" width="220" alt=""/>
             <h5 class="title">Kinberly Thompson</h5>
             <p class="cat">Marketer</p>
             <div class="social">
